# kanbn_cli

./: .env.example  .gitignore  README.md  boards.md  demo_output.py  pyproject.toml
kanbn_cli/: __init__.py  config.py  main.py
kanbn_cli/api/: __init__.py  client.py  models.py
kanbn_cli/commands/: __init__.py  admin.py  attachment.py  auth.py  board.py  card.py  checklist.py  comment.py  import_cmd.py  integration.py  invite.py  label.py  list.py  user.py  workspace.py
kanbn_cli/utils/: __init__.py  board_resolver.py  display.py  errors.py
